plugins {
    id 'java'
}

group = 'app.salary'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
        testImplementation 'org.mockito:mockito-core:5.7.0'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
    }

    jacoco {
        toolVersion = "0.8.10"
    }

    tasks.withType(Test) {
        useJUnitPlatform()
        finalizedBy jacocoTestReport
    }

    def jacocoExcludes = [
        '**/dto/**',
        '**/constants/**',
        '**/annotation/**',
        '**/entity/**',
        '**/exception/**',
        '**/RulePack.class',
        '**/RulePack$*.class',
        '**/*Application.class',
        '**/Main.class',
        '**/repository/**'
    ]

    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            html.required = true
        }
        afterEvaluate {
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: jacocoExcludes)
            }))
        }
    }

    jacocoTestCoverageVerification {
        afterEvaluate {
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: jacocoExcludes)
            }))
        }
        violationRules {
            rule {
                limit {
                    minimum = 0.80
                }
            }
        }
    }
}

// Integration test task that runs tests in integration-tests module
tasks.register('integrationTest') {
    dependsOn ':modules:integration-tests:test'
    group = 'verification'
    description = 'Runs integration tests'
}
